syntax = "proto3";

package genproto;

option go_package = "github.com/achmad-dev/internal/pkg/genproto";

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetUserByUsernameRequest {
    string email = 1;
}

message GetUserByUsernameResponse {
    User user = 1;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}